creating spark session

--- a/pyspark_basics.ipynb
+++ b/pyspark_basics.ipynb
@@ -464,6 +464,92 @@
    "source": [
     "book.printSchema()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c7c0ab4c-8dcb-4104-bd29-a0917945c6af",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('value', 'string')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a8cd9de9-3163-493c-96a9-0c750b834848",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------------------------------------------------------+\n",
+      "|value                                                               |\n",
+      "+--------------------------------------------------------------------+\n",
+      "|The Project Gutenberg EBook of Pride and Prejudice, by Jane Austen  |\n",
+      "|                                                                    |\n",
+      "|This eBook is for the use of anyone anywhere at no cost and with    |\n",
+      "|almost no restrictions whatsoever.  You may copy it, give it away or|\n",
+      "|re-use it under the terms of the Project Gutenberg License included |\n",
+      "+--------------------------------------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "book.show(5, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f2dbb8f2-1e4a-45c5-a005-dc3c8e96e26d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-RECORD 0---------------------------------------------------------------------\n",
+      " value | The Project Gutenberg EBook of Pride and Prejudice, by Jane Austen   \n",
+      "-RECORD 1---------------------------------------------------------------------\n",
+      " value |                                                                      \n",
+      "-RECORD 2---------------------------------------------------------------------\n",
+      " value | This eBook is for the use of anyone anywhere at no cost and with     \n",
+      "-RECORD 3---------------------------------------------------------------------\n",
+      " value | almost no restrictions whatsoever.  You may copy it, give it away or \n",
+      "-RECORD 4---------------------------------------------------------------------\n",
+      " value | re-use it under the terms of the Project Gutenberg License included  \n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "book.show(5, truncate=False, vertical=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19c15a74-fc25-4d5a-89ea-f1ccfefc8760",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
