--- a/pyspark_basics.ipynb
+++ b/pyspark_basics.ipynb
@@ -545,11 +545,292 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "19c15a74-fc25-4d5a-89ea-f1ccfefc8760",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[value: string]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f9802477-defe-4d39-afed-7c3d9d11c468",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[value: string]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.select(book.value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "af243486-39f6-420d-9b78-0c8e12668565",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'Column' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mbook\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalue\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mshow\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: 'Column' object is not callable"
+     ]
+    }
+   ],
+   "source": [
+    "book.value.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "92c1232c-42c1-4251-b8f9-d99d601c1abd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('value', 'string')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "book.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "dd85d3ba-3d44-4315-a00e-6e8e76ab2f73",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[split(value,  , -1): array<string>]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pyspark.sql.functions import col, split\n",
+    "\n",
+    "lines = book.select(split(col(\"value\"), \" \"))\n",
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dfecdaf8-b0f8-41f2-a9ee-b45fa5a100ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- split(value,  , -1): array (nullable = true)\n",
+      " |    |-- element: string (containsNull = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "25a6f988-7afa-45a0-90ca-521786e2f52c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------------------------------------------------------+\n",
+      "|split(value,  , -1)                                                               |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "|[The, Project, Gutenberg, EBook, of, Pride, and, Prejudice,, by, Jane, Austen]    |\n",
+      "|[]                                                                                |\n",
+      "|[This, eBook, is, for, the, use, of, anyone, anywhere, at, no, cost, and, with]   |\n",
+      "|[almost, no, restrictions, whatsoever., , You, may, copy, it,, give, it, away, or]|\n",
+      "|[re-use, it, under, the, terms, of, the, Project, Gutenberg, License, included]   |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines.show(5, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f8cd1e49-0aaf-4835-a4b0-6c49a3f70a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DataFrame[split(value,  , -1): array<string>]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines2 = book.select(split(book.value, \" \"))\n",
+    "lines2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "770f4854-ff9b-4766-a8de-9dc1d912e969",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------------------------------------------------------+\n",
+      "|split(value,  , -1)                                                               |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "|[The, Project, Gutenberg, EBook, of, Pride, and, Prejudice,, by, Jane, Austen]    |\n",
+      "|[]                                                                                |\n",
+      "|[This, eBook, is, for, the, use, of, anyone, anywhere, at, no, cost, and, with]   |\n",
+      "|[almost, no, restrictions, whatsoever., , You, may, copy, it,, give, it, away, or]|\n",
+      "|[re-use, it, under, the, terms, of, the, Project, Gutenberg, License, included]   |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines2.show(5, truncate=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "eedae13b-e0d4-463c-8dcb-6508f2f00655",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lines = book.select(split(col(\"value\"), \" \").alias(\"line\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "4ce07052-7909-4d30-9f45-f6bf44eddda7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+\n",
+      "|                line|\n",
+      "+--------------------+\n",
+      "|[The, Project, Gu...|\n",
+      "|                  []|\n",
+      "|[This, eBook, is,...|\n",
+      "|[almost, no, rest...|\n",
+      "|[re-use, it, unde...|\n",
+      "|[with, this, eBoo...|\n",
+      "|                  []|\n",
+      "|                  []|\n",
+      "|[Title:, Pride, a...|\n",
+      "|                  []|\n",
+      "|[Author:, Jane, A...|\n",
+      "|                  []|\n",
+      "|[Posting, Date:, ...|\n",
+      "|[Release, Date:, ...|\n",
+      "|[Last, Updated:, ...|\n",
+      "|                  []|\n",
+      "|[Language:, English]|\n",
+      "|                  []|\n",
+      "|[Character, set, ...|\n",
+      "|                  []|\n",
+      "+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a4177466-423f-4389-ab1b-ed814cf92787",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------------------------------------------------------------------+\n",
+      "|line                                                                              |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "|[The, Project, Gutenberg, EBook, of, Pride, and, Prejudice,, by, Jane, Austen]    |\n",
+      "|[]                                                                                |\n",
+      "|[This, eBook, is, for, the, use, of, anyone, anywhere, at, no, cost, and, with]   |\n",
+      "|[almost, no, restrictions, whatsoever., , You, may, copy, it,, give, it, away, or]|\n",
+      "|[re-use, it, under, the, terms, of, the, Project, Gutenberg, License, included]   |\n",
+      "+----------------------------------------------------------------------------------+\n",
+      "only showing top 5 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "lines.show(5, truncate=False)"
+   ]
   }
  ],
  "metadata": {
