explode each line record

--- a/pyspark_basics.ipynb
+++ b/pyspark_basics.ipynb
@@ -831,6 +831,18 @@
    "source": [
     "lines.show(5, truncate=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb901482-e484-4acb-a85d-0fdf8292128c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import explode, col\n",
+    "\n",
+    "words = lines.select(explode(col(\"line\")))"
+   ]
   }
  ],
  "metadata": {
